added live links

--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/Budget-App-JavaScript" target="_blank">GitHub</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-person-add pfo-icon"></i>
-                        <a href="#">MOOC Project</a>
+                        <a href="https://www.udemy.com/the-complete-javascript-course/" target="_blank">MOOC Project</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-eye pfo-icon"></i>
-                        <a href="#">Live View</a>
+                        <a href="https://keener101.github.io/Budget-App-JavaScript/" target="_blank">Live View</a>
                     </div>
                     
                 </div>
@@ -171,11 +171,11 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/Recipe-Website-Javascript" target="_blank">GitHub</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-person-add pfo-icon"></i>
-                        <a href="#">MOOC Project</a>
+                        <a href="https://www.udemy.com/the-complete-javascript-course/" target="_blank">MOOC Project</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-eye-disabled pfo-icon"></i>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/keener101.github.io" target="_blank">GitHub</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-person pfo-icon"></i>
@@ -201,7 +201,7 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-eye pfo-icon"></i>
-                        <a href="#">Live View</a>
+                        <a href="https://keener101.github.io" target="_blank">Live View</a>
 
                     </div>
                     
@@ -218,7 +218,7 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/Bioinformatics-Tool-BTree-Java" target="_blank">GitHub</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-person pfo-icon"></i>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/Cache-Java" target="_blank">GitHub</a>
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-person pfo-icon"></i>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="pfo-feature">
                         <i class="ion-social-github pfo-icon"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/keener101/Max-Heap-Priority-Queue-Java" target="_blank">GitHub</a>
 
                     </div>
                     <div class="pfo-feature">
