--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col span-1-of-4 box" >
                     <i class="ion-stats-bars icon-big"></i>
                     <h3>Data Science</h3>
-                    <p>My academic past gives me both a background in and passion for data science. I have some experince in R, and am currently learning Python with the goal of exploring machine learning.</p>
+                    <p>My academic past gives me both a background in and passion for data science. I have some experince in R, and MySQL. I am currently learning Python with the goal of exploring machine learning.</p>
                     
                 </div>
                 <div class="col span-1-of-4 box">
